# magicpi

./: README.md  README.rst  pyproject.toml
.github/workflows/: main.yml  pocache.yml
magicpi/: __init__.py
tests/: test_magicpi.py  test_versionconsistent.py
