[tool.poetry]
name = "magicpi"
version = "0.3.0"
description = "Testing package publishing"
authors = ["Wouter Ellenbroek <w.g.ellenbroek@tue.nl>"]
homepage = "https://github.com/wouterel/magicpi"
readme = "README.rst"
license = "EUPL-1.2"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 1 - Planning"
]


[tool.poetry.dependencies]
python = ">=3.8,<3.14"
numpy = [
    {version = "^1.23,<1.25", python = "3.8"},
    {version = ">=1.23,<2.2", python = ">=3.9,<3.12"},
    {version = ">=1.26,<2.2", python = ">=3.12"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
