[project]
name = "magicpi"
version = "0.3.0"
description = "Testing package publishing"
authors = [
    {name = "Wouter Ellenbroek", email = "w.g.ellenbroek@tue.nl"}
]
homepage = "https://github.com/wouterel/magicpi"
readme = "README.rst"
license = "EUPL-1.2"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 1 - Planning"
]
requires-python = ">=3.8,<3.14"
dependencies = [
    "numpy (>=1.23,<1.25) ; python_version >= '3.8' and python_version < '3.9'",
    "numpy (>=1.23,<2.3) ; python_version >= '3.10' and python_version < '3.12'",
    "numpy (>=1.26,<2.3) ; python_version >= '3.12' and python_version < '3.14'",
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
